--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Apache Cordova Team",
   "license": "Apache-2.0",
   "dependencies": {
-    "onsenui": "^2.12.8"
+    "onsenui": "^2.12.8",
+    "cordova-plugin-file": "^8.1.3",
+    "cordova-plugin-network-information": "^3.0.0"
   },
   "devDependencies": {
     "cordova-android": "^14.0.1",
